Fix pad size on mobile

--- a/src/nativeflavors/theme/theme/scss/app.scss
+++ b/src/nativeflavors/theme/theme/scss/app.scss
@@ -975,6 +975,9 @@ p {
 
 .pad {
     padding: 6rem 0;
+    @media #{$small-only} {
+    	padding: 4rem 0;
+    }
 }
 
 .row.full-width {
